fixed the layout issues

--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -6,52 +6,37 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-position: center;
+    background-size: cover;
     margin: 0 7.5px 15px;
-
     &.large {
         height: 380px;
     }
-  
     &:first-child {
-      margin-right: 7.5px;
+        margin-right: 7.5px;
     }
-  
     &:last-child {
-      margin-left: 7.5px;
+        margin-left: 7.5px;
     }
-  
-    .background-image {
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-position: center;
-    }
-
-
     .content {
-      height: 90px;
-      padding: 0 25px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      border: 1px solid black;
-      background-color: white;
-      opacity: 0.7;
-      position: absolute;
-      
-    
-
-      .title {
-        font-weight: bold;
-        margin-bottom: 6px;
-        font-size: 22px;
-        color: #4a4a4a;
-      }
-  
-      .subtitle {
-        font-weight: lighter;
-        font-size: 16px;
-      }
+        height: 90px;
+        padding: 0 25px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid black;
+        background-color: #fff;
+        opacity: 0.8;
+        .title {
+            font-weight: bold;
+            margin-bottom: 6px;
+            font-size: 22px;
+            color: #4a4a4a;
+        }
+        .subtitle {
+            font-weight: lighter;
+            font-size: 16px;
+        }
     }
-  }
+}
